# cherenkov_rad

./: README.md  main_formulas.py  pyproject.toml  schemes.pptx
src/: ChR_formulas.py
src/cherenkov_rad/: __init__.py  formulas.py
