[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cherenkov_rad"         # your package name goes here
version = "0.1.0"
description = "Cherenkov radiation tools"
authors = [ { name="Artem Novokshononv"} ]
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["numpy", "scipy"]

[tool.setuptools.packages.find]
where = ["src"]
